tests/rosetta/out/Smalltalk/balanced-ternary.out
/workspace/mochi/tests/rosetta/out/Smalltalk/balanced-ternary.st:10: invalid assignment to argument s
/workspace/mochi/tests/rosetta/out/Smalltalk/balanced-ternary.st:86: parse error, expected integer literal or floating-point literal or decimal literal
